2009-04-15  Ozkan Sezer  <sezeroz@gmail.com>

	* gdtoa/dtoa.c, gdtoa/gdtoa.c: Sync'ed with the netlib.org sources.
	* gdtoa/gdtoa.h:  Minor cleanup.
	* gdtoa/gdtoa_fltrnds.h: New.
	* gdtoa/README, gdtoa/dtoa.c, gdtoa/g_dfmt.c, gdtoa/g_ffmt.c,
	gdtoa/g_xfmt.c, gdtoa/gdtoaimp.h, gdtoa/strtof.c, gdtoa/strtopx.c:
	Merged the Honor_FLT_ROUNDS/fegetround() bits from the current
	netlib.org sources.

	* gdtoa/gdtoaimp.h, gdtoa/strtodg.c: decrement() now returns void.

	* gdtoa/strtodg.c: fix a botch in the test of whether to increase
	rvbits before terminating the big for(;;) loop with dsign true (from
	netlib.org sources.)

	* gdtoa/gethex.c (gethex): Use ULbits as the multiplier, not 32 (from
	netlib.org sources.)

	* gdtoa/strtodg.c: Merge the rest of the rounding changes since the
	commit rev.776.

	* gdtoa/gethex.c (gethex): Another 32/ULbits change.

	* gdtoa/hexnan.c: Allow optional initial 0x or 0X.
	* gdtoa/gdtoaimp.h: Update accordingly for GDTOA_NON_PEDANTIC_NANCHECK.

	* gdtoa/gethex.c: fix an off-by-one bug in a rounding test. merge the
	rest of the rounding stuff. (from netlib.org sources.)

2009-04-14  Ozkan Sezer  <sezeroz@gmail.com>

	* gdtoa/dmisc.c, gdtoa/dtoa.c, gdtoa/gdtoa.c, gdtoa/gdtoa.h,
	gdtoa/gdtoaimp.h, gdtoa/misc.c, gdtoa/smisc.c, gdtoa/strtodg.c,
	gdtoa/strtof.c, gdtoa/ulp.c: merged the aliasing violation changes from
	the latest netlib.org sources.

	* gdtoa/misc.c: Restored the d0 and d1 macros in b2d() and d2b() for
	smaller diffs with the netlib.org sources.

2009-04-13  Ozkan Sezer  <sezeroz@gmail.com>

	* gdtoa/dtoa.c, gdtoa/gdtoa.c, gdtoa/gdtoaimp.h, gdtoa/misc.c,
	gdtoa/smisc.c, gdtoa/strtodg.c, gdtoa/ulp.c: Revmoved support for IBM,
	CRAY and VAX modes and replaced typecast assignments by union usage:
	The IBM, CRAY and VAX macros still live in the gdtoa.h and gdtoaimp.h,
	but all the actual code supporting them are deleted for more a clear
	code.
	* gdtoa/gdtoa.h: For mingw32/64, define Long as int (32 bit integer)